# decklink-io

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cc
src/cmake/: idlfilehelper.cmake
src/decklink/: api.cc  api.h  decklink-device-enumerator.h  decklink-device-instance.cc  decklink-device-instance.h  decklink-device-mgr.cc  decklink-device-mgr.h  decklink-device.cc  decklink-device.h  decklink-input.cc  decklink-input.h  decklink-output.cc  decklink-output.h  decklink-types.h  platform.h
src/linux/: platform.cc
src/linux/decklink-sdk/: DeckLinkAPIDispatch.cpp  DeckLinkAPIDispatch_v10_11.cpp
src/win/: platform.cc
test/: CMakeLists.txt  main.test.cc
